# EasyNet

./: BUILD.bazel  analyze.py  build.bat  build.sh  run.bat  run.sh
include/: easyclient.c  easyclient.h  easylog.h  easynet.h  easypacket.c  easypacket.h  easysafety.c  easysafety.h  easyserver.c  easyserver.h  easystructs.c  easystructs.h  easyutils.c  easyutils.h  hostinfo.c  hostinfo.h  netbasic.c  netbasic.h
src/: client.c  fileclient.c  fileserver.c  ftpapp.c  proxy.c  server.c
