cc_library(
	name = "easynet",
	includes = ["include"],
	hdrs = glob(["include/*.h"]),
	visibility = ["//visibility:public"]
)

cc_binary(
	name = "server",
	srcs = ["src/server.c"],
	deps = [":easynet"]
)

cc_binary(
	name = "client",
	srcs = ["src/client.c"],
	deps = [":easynet"]
)

cc_binary(
	name = "win_server",
	srcs = ["src/server.c"],
	deps = [":easynet"],
	linkopts = [
		"-DEFAULTLIB:ws2_32.lib",
	]
)

cc_binary(
	name = "win_client",
	srcs = ["src/client.c"],
	deps = [":easynet"],
	linkopts = [
		"-DEFAULTLIB:ws2_32.lib",
	]
)

